Fix minor positioning inconsistencies with header on small resolutions

--- a/sass/components/_site-header.scss
+++ b/sass/components/_site-header.scss
@@ -15,10 +15,11 @@
   > .main-navigation > .menu-toggle {
     border-radius: 0;
     border-width: 0;
+    padding: $sm-fat-line 0;
   }
 
   > .main-navigation > .menu-toggle > .icon {
-    height: $title-ft-size;
+    height: $ft-size;
     width: auto;
   }
 
