--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
-    
+    font-size: $ft-size;
+    line-height: $ft-size;
 }
 
 h1,
